Mise à jour Firebase et fichiers de configuration

--- a/public/hunt.html
+++ b/public/hunt.html
@@ -129,7 +129,10 @@
 <body>
   <!-- Header fixe -->
   <div id="fixed-header">
-    <a href="https://onlyfans-amelina.com" target="_blank">Mon OnlyFans à 50%</a>
+    <a href="https://onlyfans.com/amelina_xo" target="_blank">
+      🔥 Mon OnlyFans à -50% ! 🔥<br>
+      👉 Clique ici et rejoins-moi maintenant.
+    </a>
   </div>
   
   <div id="main-container">
@@ -457,6 +460,11 @@
         console.error("Erreur lors de l'authentification anonyme :", error);
       });
     
+  </script>
+   <!-- 🚀 IMPORT DU MODULE JUSTE AVANT </body> -->
+   <script type="module">
+    import { initUser } from "/js/userTracking.js";
+    initUser();
   </script>
 </body>
 </html>
